# UOP-F1tenth-First-Competition-Portfolio-AIR-

./: .gitignore  README.md
01-hardware-bringup/: README.md  acegamer_controller.py  duty_test_linux.py  ps4_vesc_controller_duty_linux.py  roboracer.py  servo_float_linux.py  servo_only_linux_hold.py  vesc_ping_linux.py
02-sensors/: README.md
02-sensors/lidar/: LiDARCode.py  follow_the_gap.py  lidar_node.py
02-sensors/zed/: ZED_test.py  detection.py  zed2i.py  zed2i_orange_detect.py  zed2i_sanity_check.py  zed_node.py
03-reactive-nav/: AssistedAutonomyV1.py  CAR.py  README.md  Reactive.py  Reactive_ZED_gap.py  Reactive_ftg.py  Reactive_option2_gap.py  SteeringAssist.py  car_joy_node.py  corridor_node.py  orange_track_nav.py
04-slam-ml/: GitHubData.py  README.md  testing_1.py  zed_lidar_slam_nav_v1.py  zed_lidar_slam_nav_v2.py  zed_lidar_slam_nav_v3.py  zed_lidar_slam_nav_v4.py  zed_lidar_track_nav.py  zed_lidar_track_nav_v2.py
04-slam-ml/models/: slam_map_save.npz  steering_net.pt
05-ros2-workspaces/: README.md
05-ros2-workspaces/v4_ws/src/corridor/: package.xml
05-ros2-workspaces/v5_ws/src/corridor/: setup.cfg  setup.py
05-ros2-workspaces/v5_ws/src/corridor/corridor/: corridor_node.py
05-ros2-workspaces/v5_ws/src/corridor/launch/: corridor.launch.py
05-ros2-workspaces/v6_ws/src/corridor/: package.xml  setup.py
05-ros2-workspaces/v6_ws/src/corridor/corridor/: corridor_node.py  mode_manager_node.py  pure_pursuit_node.py  waypoint_logger_node.py
05-ros2-workspaces/v6_ws/src/corridor/launch/: mapping.launch.py  race.launch.py
05-ros2-workspaces/v7_ws/src/corridor/: package.xml  setup.py
05-ros2-workspaces/v7_ws/src/corridor/corridor/: car_node.py  corridor_node.py  joy_node.py  mode_manager_node.py  pure_pursuit_node.py  zed_obstacle_node.py  zed_recorder_node.py
05-ros2-workspaces/v7_ws/src/corridor/launch/: corridor.launch.py
05-ros2-workspaces/v7_ws/src/f1tenth_lifelong_racing/: CMakeLists.txt  package.xml
05-ros2-workspaces/v7_ws/src/f1tenth_lifelong_racing/config/: racing_manager.yaml
05-ros2-workspaces/v7_ws/src/f1tenth_lifelong_racing/include/f1tenth_lifelong_racing/: racing_manager_node.hpp
05-ros2-workspaces/v7_ws/src/f1tenth_lifelong_racing/launch/: racing_manager.launch.py
05-ros2-workspaces/v7_ws/src/f1tenth_lifelong_racing/src/: racing_manager_node.cpp
05-ros2-workspaces/v8_ws/src/corridor/: package.xml  setup.py
05-ros2-workspaces/v8_ws/src/corridor/corridor/: corridor_node.py  corridor_node_comp.py  corridor_node_v11.py  visualizer_node.py  zed_obstacle_node.py  zed_obstacle_node_comp.py
05-ros2-workspaces/v8_ws/src/corridor/launch/: corridor.launch.py  corridor_comp.launch.py  corridor_v11.launch.py
05-ros2-workspaces/v9_ws/src/v9nav/: package.xml  setup.cfg  setup.py
05-ros2-workspaces/v9_ws/src/v9nav/config/: slam_localization.yaml  slam_mapping.yaml
05-ros2-workspaces/v9_ws/src/v9nav/launch/: v9nav.launch.py
05-ros2-workspaces/v9_ws/src/v9nav/v9nav/: car_node.py  corridor_node.py  corridor_node_v11.py  mapping_node.py  mode_manager_node.py  pure_pursuit_node.py  visualizer_node.py  zed_obstacle_node.py
docs/: AI_Handoff_Roboracer.md  PS4_VESC_Controller_Documentation.md  Roboracer_System_Report.md  VESC_6_MkVI_Documentation.md  Why_We_Use_Docker.md
