<?xml version="1.0"?>
<package format="3">
  <name>corridor</name>
  <version>0.1.0</version>
  <description>v8 corridor-only reactive nav</description>
  <maintainer email="pbartholomy333@gmail.com">orinnano</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>roboracer</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
