<?xml version="1.0"?>
<package format="3">
  <name>v9nav</name>
  <version>0.1.0</version>
  <description>v9 SLAM mapping + pure pursuit navigation</description>
  <maintainer email="pbartholomy333@gmail.com">orinnano</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>joy</depend>
  <exec_depend>python3-tf2-ros</exec_depend>
  <build_type>ament_python</build_type>
</package>
